[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Project/Point.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/Enemies/test.png" type="Texture" id=2]
[ext_resource path="res://src/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Point" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Image" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 1.43051e-06 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = -15.0
margin_top = -15.0
margin_right = 15.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
visible = false
margin_left = -40.0
margin_top = -40.0
margin_right = 55.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 3 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
